--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t tbiddu/multi-docker:latest -f ./client/Dcokerfile.dev ./client
+  - docker build -t tbiddu/multi-docker:latest -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true tbiddu/multi-docker npm test
