--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t tbiddu/multi-client -f ./client/Dockerfile.dev ./client
+  - docker build -t tbiddu/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true tbiddu/multi-client npm test
+  - docker run -e CI=true tbiddu/react-test npm test
 
 after_success:
   - docker build -t tbiddu/multi-client ./client
